--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,9 +17,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  animate_do: ^3.1.2
   flutter_lints: ^5.0.0
 flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/background.png
+    - assets/illustration.png
 
